# pico_zense_camera

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: main.yml
cfg/: pico_zense_dcam710.cfg
config/: 850312072362.json  base.json  rviz.rviz
description/: cameras.urdf.xacro
description/d435/: README.md  _d435.urdf.xacro  test_d435_camera.urdf.xacro
docker/: docker-compose.yaml
docs/: README.md  database.md
include/pico_zense/: PicoZense_define.h
include/pico_zense_camera/: PicoZense_api.h  PicoZense_enums.h  PicoZense_types.h  pico_zense_manager.hpp
launch/: IP_camera.launch  camera_publisher.launch  pz_camera.launch  ros_bridge_server.launch  run_manual_scenario.launch  run_scenario.launch
msg/: BME680.msg  WeatherBoard2.msg
scenarios/: all_rows_single_camera.yaml  colour_topic_video.yaml  row_a4_single_row_camera.yaml  row_a5_single_row_camera.yaml  row_b1_single_row_camera.yaml
scripts/: dynamic_camera_launcher.py  dynamic_data_capture.py  install_mongodb.sh  ip_camera.py  manual_data_capture.py  odroid_setup.sh  pi0_weather_publisher.py  setup_database.sh  start_ip_cam.sh
scripts/examples/: camera_logger.py  camera_reconfigure.py  periodic_capture.py
scripts/scenarios/: inter_row_robot14_rowb1.yaml  inter_row_robot19.yaml  manual_data_capture.yaml
src/database_manager/: documents.py  export_to_annotation_folder.py  filesystem_to_database.py  mongo.py  mongo_compat.ipynb  mongo_compat.py
src/ip_camera/: display_saved_images.py
src/odroid/: __init__.py
src/odroid/weather_board/: drivers.py  weather_board.py
src/pico_zense/: FramePublisher.cpp
src/pico_zense/lib/: info.md
src/pico_zense_camera/: FrameViewer.cpp  pico_zense_driver.cpp  pico_zense_manager.cpp
src/rasberry_data_collection_pkg/: camera.py  display.py
